--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
     "openai": "^4.29.1"
   },
   "devDependencies": {
